force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/cgcloud__CP_Pricing_Condition__c.object-meta.xml
<CustomObject>
    <description>This Object holds the details of the pricing condition object used by the complex pricing funcionality.</description>
    <label>Complex Pricing Condition</label>
    <nameField>
        <displayFormat>PC - {000000}</displayFormat>
        <label>Pricing Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complex Pricing Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>