force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Account_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the customer set object.</description>
    <label>Customer Set</label>
    <referenceTo>cgcloud__Account_Set__c</referenceTo>
    <relationshipLabel>Complex Pricing Conditions</relationshipLabel>
    <relationshipName>CP_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>