force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Content__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Content__c</fullName>
    <description>XML structure with aggregated condition information.</description>
    <label>Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>