force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Content_Hash__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Content_Hash__c</fullName>
    <description>The Content Hash to identify changes on Content field</description>
    <label>Content Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>