force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Deleted__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if a pricing condition has been deleted by the complex pricing batch.</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>