force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Distribution_Category__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Distribution_Category__c</fullName>
    <label>Distribution Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>To All</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>