force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Key_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Key_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the key type object.</description>
    <label>Key Type</label>
    <referenceTo>cgcloud__CP_Key_Type__c</referenceTo>
    <relationshipLabel>Complex Pricing Conditions</relationshipLabel>
    <relationshipName>Complex_Pricing_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>