force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Merged_Key__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Merged_Key__c</fullName>
    <description>A merged key of all key attributes defined by key type.</description>
    <label>Merged Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>