force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Pricing_Condition_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pricing_Condition_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the pricing condition template.</description>
    <label>Pricing Condition Template</label>
    <referenceTo>cgcloud__CP_Pricing_Condition_Template__c</referenceTo>
    <relationshipLabel>Complex Pricing Conditions</relationshipLabel>
    <relationshipName>Pricing_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>