force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Product_Assortment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Assortment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the product assortment object.</description>
    <label>Product Assortment</label>
    <referenceTo>Assortment</referenceTo>
    <relationshipLabel>Complex Pricing Conditions</relationshipLabel>
    <relationshipName>Complex_Pricing_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>