force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Promotion__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the promotion object.</description>
    <label>Promotion</label>
    <referenceTo>cgcloud__Promotion__c</referenceTo>
    <relationshipLabel>Complex Pricing Conditions</relationshipLabel>
    <relationshipName>Complex_Pricing_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>