force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Replication_Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Replication_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replication by Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Complex Pricing Conditions</relationshipLabel>
    <relationshipName>Complex_Pricing_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>