force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Replication_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Replication_Key_Id__c</fullName>
    <label>Replication Key Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>