force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__TemplateKeyTypeMergedKeyHash__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__TemplateKeyTypeMergedKeyHash__c</fullName>
    <description>Hash of Pricing Template, Key Type, Merged Key for faster data retrieval</description>
    <label>Template Key Type Merged Key Hash</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>