force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <description>Start period of all conditions merged into this condition (earliest one)</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>