force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <description>End period of all conditions merged into this condition (oldest one)</description>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>