force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/validationRules/cgcloud__Key_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Key_Type_Required</fullName>
    <active>true</active>
    <description>The Key Type can&apos;t be empty.</description>
    <errorConditionFormula>ISBLANK(cgcloud__Key_Type__c)</errorConditionFormula>
    <errorMessage>The Key Type can&apos;t be empty.</errorMessage>
</ValidationRule>