force-app/main/default/objects/cgcloud__CP_Pricing_Condition__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Key_Type__c</columns>
    <columns>cgcloud__Pricing_Condition_Template__c</columns>
    <columns>cgcloud__Merged_Key__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cgcloud__Pricing_Condition_Template__c</field>
        <operation>contains</operation>
        <value>CT_Grouping_A_Q_F</value>
    </filters>
    <label>All</label>
</ListView>